--- a/package.json
+++ b/package.json
@@ -16,16 +16,34 @@
 		"@sveltejs/kit": "^1.20.4",
 		"@typescript-eslint/eslint-plugin": "^6.0.0",
 		"@typescript-eslint/parser": "^6.0.0",
+		"autoprefixer": "^10.4.14",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte": "^2.30.0",
+		"postcss": "^8.4.24",
+		"postcss-load-config": "^4.0.1",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.10.1",
 		"svelte": "^4.0.5",
+		"svelte-carousel": "^1.0.25",
 		"svelte-check": "^3.4.3",
+		"tailwindcss": "^3.3.2",
+		"tailwindcss-animate": "^1.0.7",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"vite": "^4.4.2"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@sveltejs/adapter-vercel": "^3.0.3",
+		"@tailwindcss/typography": "^0.5.10",
+		"bits-ui": "^0.5.7",
+		"clsx": "^2.0.0",
+		"lucide-svelte": "^0.279.0",
+		"radix-icons-svelte": "^1.2.1",
+		"svelte-inview": "^4.0.1",
+		"tailwind-merge": "^1.14.0",
+		"tailwind-variants": "^0.1.14",
+		"vite-imagetools": "^5.0.8"
+	}
 }
