--- a/package.json
+++ b/package.json
@@ -40,8 +40,10 @@
 		"bits-ui": "^0.5.7",
 		"clsx": "^2.0.0",
 		"lucide-svelte": "^0.279.0",
+		"photoswipe": "^5.4.2",
 		"radix-icons-svelte": "^1.2.1",
 		"svelte-inview": "^4.0.1",
+		"svelte-photoswipe": "^0.0.2",
 		"tailwind-merge": "^1.14.0",
 		"tailwind-variants": "^0.1.14",
 		"vite-imagetools": "^5.0.8"
