--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
 		"radix-icons-svelte": "^1.2.1",
 		"svelte-inview": "^4.0.1",
 		"svelte-photoswipe": "^0.0.2",
+		"svelte-vertical-timeline": "^1.0.0",
 		"tailwind-merge": "^1.14.0",
 		"tailwind-variants": "^0.1.14",
 		"vite-imagetools": "^5.0.8"
