--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
+		"@melt-ui/pp": "^0.1.2",
+		"@melt-ui/svelte": "^0.57.3",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.20.4",
 		"@types/google.maps": "^3.54.4",
@@ -28,6 +30,7 @@
 		"svelte": "^4.0.5",
 		"svelte-carousel": "^1.0.25",
 		"svelte-check": "^3.4.3",
+		"svelte-sequential-preprocessor": "^2.0.1",
 		"tailwindcss": "^3.3.2",
 		"tailwindcss-animate": "^1.0.7",
 		"tslib": "^2.4.1",
