--- a/package.json
+++ b/package.json
@@ -39,9 +39,11 @@
 		"@googlemaps/js-api-loader": "^1.16.2",
 		"@sveltejs/adapter-vercel": "^3.0.3",
 		"@tailwindcss/typography": "^0.5.10",
+		"bigger-picture": "^1.1.12",
 		"bits-ui": "^0.5.7",
 		"clsx": "^2.0.0",
 		"lucide-svelte": "^0.279.0",
+		"macy": "^2.5.1",
 		"photoswipe": "^5.4.2",
 		"radix-icons-svelte": "^1.2.1",
 		"svelte-inview": "^4.0.1",
