--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"@googlemaps/js-api-loader": "^1.16.2",
 		"@sveltejs/adapter-vercel": "^3.0.3",
 		"@tailwindcss/typography": "^0.5.10",
+		"animate.css": "^4.1.1",
 		"bigger-picture": "^1.1.12",
 		"bits-ui": "^0.5.7",
 		"clsx": "^2.0.0",
@@ -51,6 +52,7 @@
 		"svelte-vertical-timeline": "^1.0.0",
 		"tailwind-merge": "^1.14.0",
 		"tailwind-variants": "^0.1.14",
+		"tailwindcss-animatecss": "^3.0.4",
 		"vite-imagetools": "^5.0.8"
 	}
 }
