--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
-		"format": "prettier --plugin-search-dir . --write ."
+		"format": "prettier --plugin-search-dir . --write .",
+		"postbuild": "npx svelte-sitemap --out-dir .vercel/output/static --domain https://interhome.com.pl"
 	},
 	"devDependencies": {
 		"@melt-ui/pp": "^0.1.2",
@@ -30,6 +31,7 @@
 		"svelte": "^4.0.5",
 		"svelte-check": "^3.4.3",
 		"svelte-sequential-preprocessor": "^2.0.1",
+		"svelte-sitemap": "^2.6.0",
 		"tailwindcss": "^3.3.2",
 		"tailwindcss-animate": "^1.0.7",
 		"typescript": "^5.0.0",
@@ -51,6 +53,7 @@
 		"radix-icons-svelte": "^1.2.1",
 		"svelte-inview": "^4.0.1",
 		"svelte-vertical-timeline": "^1.0.0",
+		"sveltekit-sitemap": "^1.0.21",
 		"tailwind-merge": "^1.14.0",
 		"tailwind-variants": "^0.1.14",
 		"tailwindcss-animatecss": "^3.0.4",
