--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
 		"format": "prettier --plugin-search-dir . --write .",
-		"postbuild": "npx svelte-sitemap --out-dir .vercel/output/static --domain https://interhome.com.pl"
+		"postbuild": "yarn generate:sitemap",
+		"generate:sitemap": "svelte-sitemap --domain https://interhome.com.pl; cp build/sitemap.xml static/sitemap.xml"
 	},
 	"devDependencies": {
 		"@melt-ui/pp": "^0.1.2",
