--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
 		"format": "prettier --plugin-search-dir . --write .",
-		"postbuild": "yarn generate:sitemap",
-		"generate:sitemap": "svelte-sitemap --domain https://interhome.com.pl; cp build/sitemap.xml static/sitemap.xml"
+		"postbuild": "npx tsx ./scripts/generate-sitemap.ts"
 	},
 	"devDependencies": {
 		"@melt-ui/pp": "^0.1.2",
@@ -32,7 +31,6 @@
 		"svelte": "^4.0.5",
 		"svelte-check": "^3.4.3",
 		"svelte-sequential-preprocessor": "^2.0.1",
-		"svelte-sitemap": "^2.6.0",
 		"tailwindcss": "^3.3.2",
 		"tailwindcss-animate": "^1.0.7",
 		"typescript": "^5.0.0",
@@ -48,16 +46,17 @@
 		"bigger-picture": "^1.1.12",
 		"bits-ui": "^0.5.7",
 		"clsx": "^2.0.0",
+		"directory-tree": "^3.5.1",
 		"lucide-svelte": "^0.279.0",
 		"macy": "^2.5.1",
 		"photoswipe": "^5.4.2",
 		"radix-icons-svelte": "^1.2.1",
 		"svelte-inview": "^4.0.1",
 		"svelte-vertical-timeline": "^1.0.0",
-		"sveltekit-sitemap": "^1.0.21",
 		"tailwind-merge": "^1.14.0",
 		"tailwind-variants": "^0.1.14",
 		"tailwindcss-animatecss": "^3.0.4",
+		"tsx": "^4.2.0",
 		"vite-imagetools": "^5.0.8"
 	}
 }
