--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
 		"format": "prettier --plugin-search-dir . --write .",
-		"postbuild": "npx tsx ./scripts/generate-sitemap.ts"
+		"postbuild": "tsx ./scripts/generate-sitemap.ts"
 	},
 	"devDependencies": {
 		"@melt-ui/pp": "^0.1.2",
@@ -33,6 +33,7 @@
 		"svelte-sequential-preprocessor": "^2.0.1",
 		"tailwindcss": "^3.3.2",
 		"tailwindcss-animate": "^1.0.7",
+		"tsx": "^4.7.1",
 		"typescript": "^5.0.0",
 		"vite": "^4.4.2"
 	},
@@ -56,7 +57,6 @@
 		"tailwind-merge": "^1.14.0",
 		"tailwind-variants": "^0.1.14",
 		"tailwindcss-animatecss": "^3.0.4",
-		"tsx": "^4.2.0",
 		"vite-imagetools": "^5.0.8"
 	}
 }
